--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Justin Looi",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongoose": "^7.4.4",
     "node-telegram-bot-api": "^0.61.0"
   },
