--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,5 @@
-BOT_TOKEN = 
-BOT_NAME = 
-LOCAL_DB = 
-WEBHOOK_URL =
-SERVER_URL = 
-
-REMOTE_DB = 
-DB = 
-
-
-PORT = 
+BOT_TOKEN= 
+BOT_NAME= 
+SERVER_URL=  
+PORT= 
+MONGO_DB_CONNECTION_STRING=
