--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
+    "test": "jest",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix . --config .eslintrc.js --ext .js",
+    "format": "prettier --write ."
   },
   "author": "Justin Looi",
   "license": "ISC",
@@ -21,6 +23,11 @@
   },
   "devDependencies": {
     "eslint": "^8.55.0",
-    "nodemon": "^3.0.1"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.1.0"
   }
 }
