--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^129.0.0",
     "mongoose": "^7.4.4",
     "node-telegram-bot-api": "^0.61.0",
     "nodemailer": "^6.9.7"
