Feature: Send email configs using env file

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
-BOT_TOKEN= 
-BOT_NAME= 
-SERVER_URL=  
-PORT= 
+BOT_TOKEN=
+BOT_NAME=
+SERVER_URL=
+PORT=
 MONGO_DB_CONNECTION_STRING=
 GMAIL=
-GMAIL_PASSWORD=
+CLIENT_ID=
+CLIENT_SECRET=
+REDIRECT_URI=
+REFRESH_TOKEN=
