Fix: New configuration Management

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "studentid_telegrambot_js",
   "version": "1.0.0",
   "description": "Telegram bot using javascript",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "jest",
     "lint": "eslint .",
     "lint:fix": "eslint --fix . --config .eslintrc.js --ext .js",
