Update .env.example with Telegram, Server, MongoDB, and Gmail configurations

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,16 @@
-BOT_TOKEN=
-BOT_NAME=
-SERVER_URL=
-PORT=
-MONGO_DB_CONNECTION_STRING=
-GMAIL=
-CLIENT_ID=
-CLIENT_SECRET=
-REDIRECT_URI=
-REFRESH_TOKEN=
+# Telegram Bot Configuration
+BOT_TOKEN=                     # Your Telegram Bot Token (provided by BotFather)
+BOT_NAME=                      # Name of your Telegram Bot
+
+# Server Configuration
+SERVER_URL=                    # URL where your server is hosted (used for webhook setup)
+PORT=                          # The port on which your server will listen
+
+# MongoDB Configuration
+MONGO_DB_CONNECTION_STRING=    # MongoDB Connection String (URI for connecting to your MongoDB instance)
+
+# Gmail Configuration for Nodemailer
+GMAIL=                         # Email address used to send emails via Nodemailer
+CLIENT_ID=                     # OAuth2 Client ID for Gmail API
+CLIENT_SECRET=                 # OAuth2 Client Secret for Gmail API
+REFRESH_TOKEN=                 # OAuth2 Refresh Token used to obtain new access tokens
